<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="MainActivityBinding">

        <variable
            name="emp"
            type="com.artitk.android_databinding_example.Employee" />

        <variable
            name="gender"
            type="com.artitk.android_databinding_example.Employee.GenderEnum" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_normal_plus"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/lbl_title_name"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/txt_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_title_name"
                android:layout_toEndOf="@+id/lbl_title_name"
                android:layout_toRightOf="@+id/lbl_title_name"
                android:inputType="text"
                android:text="@{emp.name}"
                app:addTextChangedListener="@{emp.nameWatcher}" />

            <TextView
                android:id="@+id/lbl_title_age"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lbl_title_name"
                android:layout_alignStart="@+id/lbl_title_name"
                android:layout_below="@+id/lbl_title_name"
                android:layout_marginTop="@dimen/space_normal_plus"
                android:text="@string/age" />

            <EditText
                android:id="@+id/txt_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_title_age"
                android:layout_alignLeft="@+id/txt_fullname"
                android:layout_alignStart="@+id/txt_fullname"
                android:ems="3"
                android:inputType="number"
                android:maxLength="3"
                android:text="@{String.valueOf(emp.age)}"
                app:addTextChangedListener="@{emp.ageWatcher}" />

            <Button
                android:id="@+id/btn_add_age1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_title_age"
                android:layout_marginLeft="@dimen/space_tiny"
                android:layout_marginStart="@dimen/space_tiny"
                android:layout_toEndOf="@+id/txt_age"
                android:layout_toRightOf="@+id/txt_age"
                android:text="@string/plus1" />

            <TextView
                android:id="@+id/lbl_gender"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lbl_title_age"
                android:layout_alignStart="@+id/lbl_title_age"
                android:layout_below="@+id/lbl_title_age"
                android:layout_marginTop="@dimen/space_normal_plus"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/lbl_gender"
                android:layout_marginTop="@dimen/space_negative_small"
                android:layout_toEndOf="@+id/lbl_gender"
                android:layout_toRightOf="@+id/lbl_gender"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdo_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{emp.gender == gender.UNKNOWN}"
                    android:text="@string/unknown"
                    app:setOnCheckedChangeListener="@{emp.genderListener}" />

                <RadioButton
                    android:id="@+id/rdo_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{emp.gender == gender.MALE}"
                    android:text="@string/male"
                    app:setOnCheckedChangeListener="@{emp.genderListener}" />

                <RadioButton
                    android:id="@+id/rdo_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{emp.gender == gender.FEMALE}"
                    android:text="@string/female"
                    app:setOnCheckedChangeListener="@{emp.genderListener}" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_gender"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_normal_plus"
                android:text="@string/save" />
        </RelativeLayout>
    </RelativeLayout>
</layout>
